--- a/interface/index.html
+++ b/interface/index.html
@@ -1,19 +1,25 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <title>QuickPoll (scaffold)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <style>
-    body{font-family:system-ui,Arial,sans-serif;background:#f6f7fb;color:#111;display:flex;align-items:center;justify-content:center;height:100vh;margin:0}
-    .card{background:#fff;padding:24px;border-radius:12px;box-shadow:0 6px 18px rgba(16,24,40,0.06);text-align:center}
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>QuickPoll</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="card">
-    <h1>QuickPoll</h1>
-    <p>Server scaffold is running ✅</p>
-    <p><a href="/api/health">Check /api/health</a></p>
-  </div>
+  <header class="header">
+    <div class="logo">QuickPoll</div>
+    <div class="header-actions">
+      <div class="search-container">
+        <span class="search-icon">🔍</span>
+        <input type="text" placeholder="Search Poll" class="search-input">
+      </div>
+      <button class="create-poll-btn">+ Create Poll</button>
+    </div>
+  </header>
+
+  <main>
+    <!-- Aquí luego irá el contenido principal de encuestas -->
+  </main>
 </body>
 </html>
